gitops/overlays/baseline/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: baseline
  labels:
    istio-injection: enabled
